--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./stopwatchsvg.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./weight-gym.svg" type="image/x-icon" />
     <title>Тренерский состав</title>
   </head>
   <body>
